<resources>
    <string name="app_name">eCard</string>
    <string name="title_activity_register">Register</string>
    <string name="Email">Email: ilya.thai1@gmail.com</string>
    <string name="action_settings">Settings</string>

    <!--  bar code -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click "Scan Barcode" to scan a barcode</string>
    <string name="read_barcode">Scan Barcode</string>
    <string name="encode_hint"><small><i>encode value</i></small></string>
    <string name="generate_barcode">Generate</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="barcode_format">Barcode Format</string>
    <string-array name="barcode_types">
        <item>QR_CODE</item>
        <item>CODE_128</item>
        <item>CODE_39</item>
        <item>UPC_E</item>
        <item>ITF</item>
        <item>PDF_417</item>
        <item>EAN_13</item>
        <item>AZTEC</item>
        <item>MAXICODE</item>
    </string-array>

    <!-- Tag information  -->
    <string name="ID">Tag ID: </string>
    <string name="ID_text">identification number</string>
    <string name="tech">Tech List: </string>
    <string name="tech_text">undefined</string>
    <string name="tagType">Tag type: </string>
    <string name="tagType_text">undefined</string>
    <string name="tagMessage">Tag message: </string>
    <string name="tagMessage_text"><i>no message detected</i></string>
    <string name="tagSize">Tag size: </string>
    <string name="tagSize_text">undefined</string>
    <string name="opalNumber">Serial Number: </string>
    <string name="opalNumber_text">undefined</string>
    <string name="opalBalance">Balance: </string>
    <string name="opalBalance_text">undefined</string>

    <!-- Tag information  -->
    <string name="tag_overwrite">Overwrite </string>
    <string name="tag_record_write">Add record </string>
    <string name="tag_clear">CLEAR </string>
    <string name="write_cancel">cancel</string>
    <string name="vcard">Business card </string>
    <string name="plainMessage">Plain Message </string>
    <string name="link">Link </string>
    <string name="teleNumber">Telephone number</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Main drawer titles  -->
    <string name="nav_home">HOME </string>
    <string name="nav_scan">SCAN </string>
    <string name="nav_manage_tags">MANAGE </string>
    <string name="nav_write">WRITE </string>
    <string name="nav_card_emulate"> CARDS </string>
    <string name="nav_qr">BARCODES</string>

    <!--  Card emulation data -->
    <string name="card_Sample">Card Sample </string>

    <!-- Register intent  -->
    <string name="reg_username">NAME </string>
    <string name="reg_username_hint">Enter your name </string>
    <string name="reg_email">EMAIL </string>
    <string name="reg_email_hint">Enter your email </string>
    <string name="reg_password">PASSWORD </string>
    <string name="reg_password_hint">Enter your password </string>
</resources>
