<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@mipmap/ic_nfc_black_24dp"
            android:title="@string/nav_scan" />
        <item
            android:id="@+id/nav_write"
            android:icon="@mipmap/ic_create_black_24dp"
            android:title="@string/nav_write" />
        <item
            android:id="@+id/nav_card_emulate"
            android:icon="@mipmap/ic_credit_card_black_24dp"
            android:title="@string/nav_card_emulate" />

        <item
            android:id="@+id/nav_qr"
            android:icon="@mipmap/ic_qrcode_scan"
            android:title="@string/nav_qr" />
        <item
            android:id="@+id/nav_manage_tags"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_manage_tags" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
