<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reg_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_username"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/grey_400"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/reg_username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/reg_username_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:layout_below="@id/reg_username"
        android:layout_alignStart="@+id/reg_username"
        android:layout_marginEnd="40dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_email"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/grey_400"
        android:layout_below="@+id/reg_username_text"
        android:layout_alignStart="@+id/reg_username"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/reg_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/reg_email_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:layout_below="@id/reg_email"
        android:layout_alignStart="@+id/reg_username"
        android:layout_marginEnd="40dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_password"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/grey_400"
        android:layout_below="@+id/reg_email_text"
        android:layout_alignStart="@+id/reg_username"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/reg_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/reg_password_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:layout_below="@id/reg_password"
        android:layout_alignStart="@+id/reg_username"
        android:layout_marginEnd="40dp"
        android:paddingBottom="15dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/reg_register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/read_barcode_btn"
        android:text="@string/title_activity_register"
        android:textSize="18sp"
        android:layout_below="@id/reg_password_text"
        android:layout_alignStart="@+id/reg_username"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp" />

</RelativeLayout>